# sensirion-ble

./: pyproject.toml  setup.py
src/sensirion_ble2/: __init__.py  converters.py
