[project]
name = "sensirion-ble2"
version = "0.1.0"
description = "Bluetooth parser for Sensirion BLE devices"
requires-python = ">=3.12"
dependencies = [
    "bluetooth-data-tools>=0.1",
    "bluetooth-sensor-state-data>=1.6",
    "home-assistant-bluetooth>=1.6",
    "sensor-state-data>=2.9",
]

[project.urls]
Documentation = "https://www.home-assistant.io/integrations/sensirion_ble"
Repository = "https://github.com/Tazmania0/sensirion-ble"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"